--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700;800&display=swap"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/78685a7038.js"
+      crossorigin="anonymous"
+    ></script>
 
     <script src="./src/app.js" defer></script>
   </head>
@@ -25,6 +29,9 @@
           <li><a href="#projects">Projects</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
+        <button class="hamburger" id="hamburger">
+          <i class="fa-solid fa-bars"></i>
+        </button>
       </nav>
       <div class="main-area">
         <div class="main-text">
